@@ -313,7 +313,7 @@ span.bbp-admin-links a {
 #bbpress-forums ul.bbp-replies .topic,
 #bbpress-forums ul.bbp-replies .reply {
 	background: transparent;
-	padding: 0 0 30px 0;
+	padding: 0 0 20px 0;
 }
 #bbpress-forums ul.bbp-replies li.bbp-body > .topic:last-child,
 #bbpress-forums ul.bbp-replies li.bbp-body > .reply:last-child {
@@ -380,6 +380,7 @@ span.bbp-author-ip {
 	border-radius: 2px;
 	float: left;
 	margin: 0;
+	min-height: 120px;
 	position: relative;
 	padding: 7px 20px;
 	width: 82%;
@@ -1053,6 +1054,7 @@ body.rtl .widget_display_stats dt {
 	#bbpress-forums .bbp-body div.bbp-topic-content,
 	#bbpress-forums .bbp-body div.bbp-reply-content {
 		float: none;
+		min-height: none;
 		width: auto;
 	}
 
